nav tools menu overlapping fix

--- a/assets/scss/modules/_board.scss
+++ b/assets/scss/modules/_board.scss
@@ -87,7 +87,7 @@
     background: $white;
     position: absolute;
     right: 0;
-    top: 1.75em;
+    top: 70%;
     border: 0.04em solid $cloudy-day;
     box-shadow: rgba(0, 0, 0, 0.2) 0 0.125em 0.5em 0;
     a {
